<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bege_100"
    tools:context=".view.HomeAcitivity">

    <LinearLayout
        android:id="@+id/LayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_style"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/name_logo"
            android:textColor="@color/bege_200"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:stateListAnimator="@null"
            android:elevation="20dp"
            android:background="@drawable/text_style"
            android:padding="2dp"
            android:text="@string/series"
            android:textColor="@color/navy"
            android:textSize="16sp"

            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:stateListAnimator="@null"
            android:elevation="20dp"
            android:background="@drawable/text_style"
            android:padding="2dp"
            android:text="@string/filmes"
            android:textColor="@color/navy"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:stateListAnimator="@null"
            android:elevation="20dp"
            android:background="@drawable/text_style"
            android:padding="2dp"
            android:text="@string/categoria"
            android:textColor="@color/navy"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:stateListAnimator="@null"
            android:elevation="20dp"
            android:background="@drawable/text_style"
            android:padding="2dp"
            android:text="@string/sair"
            android:textColor="@color/navy"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCategoria"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/LayoutHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/containerProrgessbar"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:visibility="visible"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:indeterminateTint="@color/navy"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/containerProrgessbar"
        app:layout_constraintStart_toStartOf="@id/containerProrgessbar"
        app:layout_constraintBottom_toBottomOf="@id/containerProrgessbar" />

    <TextView
        android:id="@+id/txtCarregando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carregando_progress_bar"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/containerProrgessbar"
        app:layout_constraintStart_toEndOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@id/containerProrgessbar"
        app:layout_constraintBottom_toBottomOf="@id/containerProrgessbar" />
</androidx.constraintlayout.widget.ConstraintLayout>